statefullset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ns
  labels:
    app: nginx
  namespace: nginx-ns
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: nginx-ns
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: local-disk-template
          mountPath: /usr/share/nginx/html/1
  volumeClaimTemplates:
  - metadata:
      name: local-disk-template
      namespace: nginx-ns
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-disk
      resources:
        requests:
          storage: 200Mi
